 * Fixed caching issue that prevented product-scope trac-admin commands
   from taking effect immediately.
 * Improved presentation of the Products page.
 * Improvements to ticket timeline (comments section).
 * BloodhoundSearch now supports Whoosh >= 2.5.1 (upgraded from 2.4.1).
 * Fixed errors in BloodhoundRelations validation logic.
 * Bootstrap template for the Roadmap view.
 * Numerous other important fixes and minor enhancements.


 * Not fixed for this release
  * Cache is not properly refreshed for resources including wiki pages,
    milestones, components and permissions; leading to stale data being
    displayed after INSERTs and DELETEs (#613, #614, #620, #681, #719, #748).
  * Products cannot be deleted (#517).
  * Duplicate relation is not added when batch modifying tickets (#761).
  * TicketDeleter component can't be used with BloodhoundTheme (#427).
  * No product-scope permission checks on the global dashboard (#572).
  * Inconsistencies in query views when running PostgreSQL (#730).

0.7
 * Duplicate ticket relation is integrated to the ticket workflow.
 * Several fixes for multiproduct installations with products that map to subdomains.
 * Numerous important fixes and minor enhancements.

 * Not fixed for this release:
   * No major outstanding issues

0.6

 * Added support for multiple products.
 * Added support for ticket relations.
 * Numerous improvements to the BloodhoundSearch module.
 * Redesigned the Ticket page.
 * Implemented Bootstrap templates for Timeline and AccountManagerPlugin.

 * Not fixed for this release:
  * No major outstanding issues

0.5.3

 * Removed reference to BloodhoundSearch docs in setup script, which was causing installation to fail.
 * Updated installation document so that site-packages are inherited in the virtualenv.

 * Not fixed for this release:
   * No major outstanding issues


0.5.2

 * Updated this file with 0.5.1 changes.

 * Not fixed for this release:
   * No major outstanding issues


0.5.1
