@@ -10,6 +10,7 @@
  * BloodhoundSearch now supports Whoosh >= 2.5.1 (upgraded from 2.4.1).
  * Fixed errors in BloodhoundRelations validation logic.
  * Bootstrap template for the Roadmap view.
+ * Bloodhound installer support for MySQL database.
  * Numerous other important fixes and minor enhancements.
 
 
